--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Fragment_guide_01</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">I come for you !</string>
+    <string name="txtboton">Push Me!</string>
 </resources>
